Modularize Private Messages